fixed fonts and letter spacing

--- a/styles.css
+++ b/styles.css
@@ -19,15 +19,16 @@ table, th, td {
   border-collapse: collapse;
 }
 h1 {
-    font-family: Raisonne DemiBold;
+    font-family: "Raisonne DemiBold", serif;
     font-size: 5rem;
+    letter-spacing: 0.5rem;
     margin: auto;
 }
 h2 {
     font-size: xx-large;
 }
 .helvetica {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
 }
 .center {
     margin-left: auto;
